[package]
name = "dex"
version = "0.6.2"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

minterest-primitives = { path = "../../primitives" }
liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
test-helper = { path = "../../test-helper" }
controller = { path = "../controller" }
minterest-model = { path = "../minterest-model" }
mnt-token = { path = "../mnt-token" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"orml-traits/std",

	"minterest-primitives/std",
	"pallet-traits/std",
]
