[package]
name = "integration-tests"
description = 'Integration tests'
version = "0.5.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { version = "3.0.0", default-features = false }

orml-utilities = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
liquidation-pools = { path = "../liquidation-pools", default-features = false }
minterest-protocol = { path = "../minterest-protocol", default-features = false }
risk-manager = { path = "../risk-manager", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }

orml-tokens = { version = "0.4.0" }
orml-currencies = { version = "0.4.0" }
orml-traits = { version = "0.4.0" }

liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
controller = { path = "../controller" }
pallet-traits = { path = "../traits" }
minterest-model = { path = "../minterest-model" }
minterest-protocol = { path = "../minterest-protocol" }
dex = { path = "../dex" }
mnt-token = { path = "../mnt-token" }
whitelist-module = { path = "../whitelist" }
test-helper = { path = "../../test-helper" }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    "sp-std/std",

    "orml-utilities/std",

    "minterest-primitives/std",
    "liquidity-pools/std",
    "liquidation-pools/std",
    "minterest-protocol/std",
    "risk-manager/std",
]

