[package]
name = "integration-tests"
description = "Integration tests"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

controller = { path = "../controller" }
pallet-traits = { path = "../traits" }
minterest-model = { path = "../minterest-model" }
dex = { path = "../dex" }
mnt-token = { path = "../mnt-token" }
whitelist-module = { path = "../whitelist" }
test-helper = { path = "../../test-helper" }

