[package]
name = "integration-tests"
description = "Integration tests"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
controller = { path = "../controller" }
minterest-protocol = { path = "../minterest-protocol" }
minterest-primitives = { path = "../../primitives" }
pallet-traits = { path = "../traits" }
minterest-model = { path = "../minterest-model" }
dex = { path = "../dex" }
mnt-token = { path = "../mnt-token" }
whitelist-module = { path = "../whitelist" }
risk-manager = { path = "../risk-manager" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "liquidity-pools/std",
    "liquidation-pools/std",
    "minterest-protocol/std",
]

