[package]
name = "liquidation-pools"
description = 'Pallet for managing liquidastion pools'
version = "0.6.2"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }

orml-traits = { version = '0.4.0', default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}

orml-currencies = { version = '0.4.0' }
orml-tokens = { version = '0.4.0' }

dex = { path = "../dex" }
liquidity-pools = { path = "../liquidity-pools" }
test-helper = { path = "../../test-helper" }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "sp-std/std",
    "sp-io/std",

    "orml-traits/std",
    "orml-utilities/std",

    "minterest-primitives/std",
    "pallet-traits/std",
]
