[package]
name = "liquidity-pools"
version = "0.5.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }

orml-traits = { version = "0.4.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }
orml-tokens = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}
orml-tokens = { version = "0.4.0" }
orml-currencies = { version = "0.4.0" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-arithmetic/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "orml-utilities/std",
    "orml-tokens/std",

    "minterest-primitives/std",
    "pallet-traits/std",
]
