[package]
name = "m-tokens"
version = "0.1.0"
authors = ['Minterest <https://github.com/minterest-defi>']

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

#orml-traits = { path = "../../orml/traits", default-features = false }
#orml-utilities = { path = "../../orml/utilities", default-features = false }

#module-traits = { path = "../traits", default-features = false }
#laminar-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
#    "orml-traits/std",
#    "module-traits/std",
#    "laminar-primitives/std",
]
