[package]
name = "minterest-model"
description = 'Pallet for minteres model implementation'
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-utilities = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-tokens = { version = "0.4.0" }
orml-traits = { version = "0.4.0" }

pallet-traits = { path = "../traits" }
test-helper = { path = "../../test-helper" }

[features]
default = ['std']
std = [
    "serde",
    'codec/std',
    "sp-runtime/std",
    "sp-std/std",

    'frame-support/std',
    'frame-system/std',

    "orml-utilities/std",

    "minterest-primitives/std",
]
