[package]
name = "minterest-protocol"
description = 'Pallet for minteres protocol implementation'
version = "0.5.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

orml-utilities = { version = "0.4.0", default-features = false }
orml-traits = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
liquidation-pools = { path = "../liquidation-pools", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }


orml-tokens = { version = "0.4.0" }
orml-currencies = { version = "0.4.0" }

liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
controller = { path = "../controller" }
minterest-model = { path = "../minterest-model" }
dex = { path = "../dex" }
mnt-token = { path = "../mnt-token" }
test-helper = { path = "../../test-helper" }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    "sp-std/std",

    "orml-utilities/std",
    "orml-traits/std",

    "minterest-primitives/std",
    "liquidity-pools/std",
    "liquidation-pools/std",
    "pallet-traits/std",
]
