[package]
name = "minterest-protocol"
description = 'Pallet for minteres protocol implementation'
version = "0.5.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }

orml-utilities =  { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
orml-traits =  { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
liquidation-pools = { path = "../liquidation-pools", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
#FIXME: mb remove sp_io
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }

orml-tokens =  { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies =  { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
controller = { path = "../controller" }
minterest-model = { path = "../minterest-model" }
dex = { path = "../dex" }
mnt-token = { path = "../mnt-token" }
test-helper = { path = "../../test-helper" }

[features]
default = ['std']
std = [
    'codec/std',
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
    "sp-std/std",

    "orml-utilities/std",
    "orml-traits/std",

    "minterest-primitives/std",
    "liquidity-pools/std",
    "liquidation-pools/std",
    "pallet-traits/std",
]
