[package]
name = "mnt-token"
version = "0.6.2"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-arithmetic = { version = "3.0.0", default-features = false }


minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }
test-helper = { path = "../../test-helper" }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
sp-runtime = { version = "3.0.0"}

orml-tokens = { path = "../../orml/tokens" }
orml-traits = { path = "../../orml/traits"}

liquidity-pools = { path = "../liquidity-pools" }
minterest-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",

	"sp-runtime/std",
	"sp-std/std",
	"sp-arithmetic/std",

	"frame-support/std",
	"frame-system/std",

    "pallet-traits/std",
    "minterest-primitives/std",
	"test-helper/std",
]
