[package]
name = "mnt-token"
version = "0.6.2"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

liquidity-pools = { path = "../liquidity-pools" }
minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7"}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7"}

orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }

liquidity-pools = { path = "../liquidity-pools" }
minterest-primitives = { path = "../../primitives" }
controller = { path = "../controller" }
minterest-model = { path = "../minterest-model" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",

    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",

    "frame-support/std",
    "frame-system/std",

    "pallet-traits/std",
    "minterest-primitives/std",
    "liquidity-pools/std",

    "orml-traits/std",
]
