[package]
name = 'oracle'
authors = ["Alexandr Liutsko <alexandr.liutsko@gmail.com>"]
version = '0.1.0'
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
