[package]
name = 'module-prices'
authors = ["Alexandr Liutsko <alexandr.liutsko@gmail.com>"]
version = '0.5.0'
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-runtime/std",
    "sp-std/std",
]
